--- a/index.html
+++ b/index.html
@@ -51,5 +51,17 @@
         <h4>Cart</h4>
       </a>
     </nav>
+    <!-- nav bottom -->
+    <div class="nav-bottom">
+      <div>
+        <img src="assets/menu_icon.png" width="25" alt="" />
+        <p>All</p>
+      </div>
+      <p>Today's Deals</p>
+      <p>Customer Service</p>
+      <p>Registry</p>
+      <p>Gift Cards</p>
+      <p>Sell</p>
+    </div>
   </body>
 </html>
