--- a/index.html
+++ b/index.html
@@ -63,5 +63,19 @@
       <p>Gift Cards</p>
       <p>Sell</p>
     </div>
+    <!-- header slider section -->
+    <div class="header-slider">
+      <a href="#" class="control-prev">&#129144</a>
+      <a href="#" class="control-next">&#129146</a>
+      <ul>
+        <img src="assets/header1.jpg" class="header-img" alt="" />
+        <img src="assets/header2.jpg" class="header-img" alt="" />
+        <img src="assets/header3.jpg" class="header-img" alt="" />
+        <img src="assets/header4.jpg" class="header-img" alt="" />
+        <img src="assets/header5.jpg" class="header-img" alt="" />
+        <img src="assets/header6.jpg" class="header-img" alt="" />
+      </ul>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
