card items section done

--- a/index.html
+++ b/index.html
@@ -76,6 +76,69 @@
         <img src="assets/header6.jpg" class="header-img" alt="" />
       </ul>
     </div>
+
+    <!-- card items -->
+    <div class="box-row header-box">
+      <div class="box-col">
+        <h3>free international returns</h3>
+        <img src="assets/box1-1.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Lunar New Yark</h3>
+        <img src="assets/box1-2.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Toy under $25</h3>
+        <img src="assets/box1-3.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Deals in PCs</h3>
+        <img src="assets/box1-4.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+    </div>
+    <!-- second row card item -->
+    <div class="box-row ">
+      <div class="box-col">
+        <h3>Grooming Products</h3>
+        <img src="assets/box2-1.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Latest Devices</h3>
+        <img src="assets/box2-2.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Pets Food</h3>
+        <img src="assets/box2-3.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+      <div class="box-col">
+        <h3>Fassin Mart</h3>
+        <img src="assets/box2-4.jpg" alt="">
+        <a href="#">Shop More</a>
+      </div>
+    </div>
+    <!-- product slider -->
+    <div class="product-slider">
+      <h2>Best Seller in Sports & Outdoors</h2>
+      <div class="products">
+        <img src="assets/product1-1.jpg" alt="">
+        <img src="assets/product1-2.jpg" alt="">
+        <img src="assets/product1-3.jpg" alt="">
+        <img src="assets/product1-4.jpg" alt="">
+        <img src="assets/product1-5.jpg" alt="">
+        <img src="assets/product1-6.jpg" alt="">
+        <img src="assets/product1-7.jpg" alt="">
+        <img src="assets/product1-8.jpg" alt="">
+        <img src="assets/product1-9.jpg" alt="">
+        <img src="assets/product1-10.jpg" alt="">
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
