updation in the navbar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           class="nav-search-input"
           placeholder="Search Amazon"
         />
-        <img src="assets/search_icon.png" alt="" />
+        <img src="assets/search_icon.png" class="nav-search-icon" alt="" />
       </div>
       <div class="nav-language">
         <img src="assets/us_flag.png" width="25px" alt="" />
