--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <nav>
       <a href="#">
-        <img src="./assets/amazon_logo.png" width="100" alt="" />
+        <img src="./assets/amazon_logo.png" width="100" class="border" alt="" />
       </a>
-      <div class="nav-country">
+      <div class="nav-country border">
         <img src="assets/location_icon.png" height="20px" alt="location_icon" />
         <div>
           <p>Deliver to</p>
@@ -30,23 +30,23 @@
         />
         <img src="assets/search_icon.png" class="nav-search-icon" alt="" />
       </div>
-      <div class="nav-language">
+      <div class="nav-language border">
         <img src="assets/us_flag.png" width="25px" alt="" />
         <p>En</p>
         <img src="assets/dropdown_icon.png" width="8px" alt="" />
       </div>
-      <div class="nav-text">
+      <div class="nav-text border">
         <p>Hello, Sign in</p>
         <h1>
           Account & List
           <img src="assets/dropdown_icon.png" width="8px" alt="" />
         </h1>
       </div>
-      <div class="nav-text">
+      <div class="nav-text border">
         <p>Return</p>
         <h1>& Order</h1>
       </div>
-      <a href="#" class="nav-cart">
+      <a href="#" class="nav-cart border">
         <img src="assets/cart_icon.png" width="35px" alt="" />
         <h4>Cart</h4>
       </a>
